--- a/asets/css/style.css
+++ b/asets/css/style.css
@@ -385,3 +385,20 @@ button.scroll_down {
     }
 }
 /* end call button */
+/*back top btn*/
+.scroll_top{
+    position: fixed;
+    bottom: 2%;
+    right: 2%;
+    z-index: 25;
+    width: 50px;
+    height: 50px;
+}
+.scroll_top:hover{
+    cursor: pointer;
+}
+.scroll_top img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
