--- a/asets/css/access.css
+++ b/asets/css/access.css
@@ -1,8 +1,3 @@
-/*.unselectable {
-    -moz-user-select:none;
-    -webkit-user-select:none;
-    cursor: default;
-}
 html
 {
     -webkit-touch-callout: none;
@@ -11,55 +6,28 @@ html
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
-#wpcp-error-message {
-    direction: ltr;
-    text-align: center;
-    transition: opacity 900ms ease 0s;
-    z-index: 99999999;
-}
-.hideme {
-    opacity:0;
-    visibility: hidden;
-}
-.showme {
-    opacity:1;
-    visibility: visible;
-}
-.msgmsg-box-wpcp {
-    border-radius: 10px;
-    color: #555;
-    font-family: Tahoma,sans-serif;
-    font-size: 11px;
-    margin: 10px;
-    padding: 10px 36px;
+.copy_protect{
+    width: 180px;
+    height: 50px;
+    background-color: rgba(214, 45, 82, 0.9);
     position: fixed;
-    width: 255px;
     top: 50%;
     left: 50%;
-    margin-top: -10px;
-    margin-left: -130px;
-    -webkit-box-shadow: 0px 0px 34px 2px rgba(242,191,191,1);
-    -moz-box-shadow: 0px 0px 34px 2px rgba(242,191,191,1);
-    box-shadow: 0px 0px 34px 2px rgba(242,191,191,1);
+    z-index: 55;
+    transform: translateX(-50%) translateY(-50%);
+    overflow: hidden;
+    text-align: center;
+    transition: opacity 0.2s linear, visibility 0.2s linear;
+    opacity: 0;
+    visibility: hidden;
 }
-.msgmsg-box-wpcp span {
-    font-weight:bold;
-    text-transform:uppercase;
+.show_mesag{
+    opacity: 1;
+    visibility: visible;
 }
-.error-wpcp {		background:#ffecec;
-    border:1px solid #f5aca6;
+.copy_protect p{
+    font-size: 16px;
+    font-weight: 700;
+    color: black;
 }
-.success {
-    background:#e9ffd9;
-    border:1px solid #a6ca8a;
-}
-.warning-wpcp {
-    background:#ffecec;
-    border:1px solid #f5aca6;
-}
-.notice {
-    background:#e3f7fc;
-    border:1px solid #8ed9f6;
-}*/
