--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /*!
 Theme Name: Loren
+Theme URI: https://loren.if.ua
 Author: RomanVintonyak
-Description: Wedding Decor Loren
+Description: Wedding Decor Loren company theme
+License: Loren personal license
 Version: 1.0.0
 Text Domain: loren.if.ua
 */
